syntax = "proto3";

option go_package = "github.com/anthcor/go-grpc-template/messenger";
option java_multiple_files = true;
option java_package = "io.grpc.examples.go_grpc_template.messenger";
option java_outer_classname = "MessengerProto";

package messenger;

// The message service definition.
service Messenger {
  // Sends a message
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}
}

// The request message containing the user's name.
message MessageRequest {
  string message = 1;
}

// The response message containing the messages
message MessageResponse {
  string message = 1;
}